Fix CSS styling / alignment for Create Project and All Projects Pages

--- a/public/assets/css/application.css
+++ b/public/assets/css/application.css
@@ -256,6 +256,12 @@ hr {
   height: 1px;
   background-color: #cccccc;
 }
+.hr-divider-keyline-save {
+  display: inline-block;
+  width: 100%;
+  height: 1px;
+  background-color: #cccccc;
+}
 .hr-divider-vertical {
   float: inherit;
   margin-top: 15px;
@@ -277,7 +283,7 @@ hr {
   color: #777777;
 }
 .content-subheader-project {
-  margin-left: 80px;
+  margin-left: 10%;
   font-family: HelveticaNeue;
   font-size: 16px;
   font-weight: 500;
@@ -573,22 +579,27 @@ hr {
 
 }
 
-
-
 .main-header-project-edit {
-  position: relative;
+  display: inline-block;
   width: 100%;
-  height: 260px;
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   background-color: #ffffff;
   padding: 0px;
 }
 
+.project-logo-project-edit-main {
+  display: inline-block;
+  margin-left: 10%;
+  margin-top: 20px;
+  text-align: center;
+  line-height: 1;
+  width: 350px;
+  height: 220px;
+}
+
 .project-logo-project-edit {
   display: inline-block;
-  margin-left: 100px;
-  margin-top: 20px;
   text-align: center;
   font-size: 18px;
   line-height: 1;
@@ -613,7 +624,6 @@ hr {
 .project-logo-project-edit-inside {
   width: 200px;
   height: 33px;
-  margin-left: 75px;
   margin-top: 80px;
   border-radius: 4px;
   background-color: #ffffff;
@@ -637,6 +647,29 @@ hr {
   color: #777777;
   border-bottom: 2px dashed #999;
 }
+.main-header-title-project-input{
+  border: 0px;
+  width: 650px;
+}
+@media (min-width: 0px) and (max-width: 500px) {
+    .main-header-title-project-edit {
+      margin-top: 20px;
+      font-size: 22px;
+    }
+    .main-header-title-project-input{
+      width: 350px;
+    }
+  }
+
+@media (min-width: 501px) and (max-width: 1200px) {
+    .main-header-title-project-edit {
+
+      font-size: 32px;
+    }
+    .main-header-title-project-input{
+      width: 500px;
+    }
+  }
 .button-title-project-edit{
   display: inline-block;
   width: 80px;
@@ -660,16 +693,16 @@ hr {
   font-size: 12px;
   font-weight: 400;
   font-style: italic;
-  margin-right: 170px;
+  margin-right: 5%;
   float: right;
   color: #999999;
 }
 .image-message-project-edit{
+  display: inline-block;
   font-family: HelveticaNeue;
   font-size: 12px;
   font-weight: 400;
   font-style: italic;
-  margin-left: 100px;
   float: left;
   color: #999999;
 }
@@ -678,8 +711,8 @@ hr {
 {
 
   position: relative;
-  margin-right: 110px;
-  margin-top: -18px;
+  margin-right: 5%;
+  margin-top: 3px;
   float:right;
   width:60px;
   height:60px;
@@ -715,11 +748,19 @@ hr {
   text-indent: 10px;
 }
 .discard-message-edit-project{
-  margin-left: 10%;
-  margin-top: 40px;
+  float: left;
+  /*display: inline-block;*/
+  /*margin-left: 10%;*/
+  /*margin-top: auto;*/
+  /*margin-top: 40px;*/
+}
+.button-save-changes-edit-project-div{
+  /*display: inline-block;*/
+  float: right;
+  /*margin-left: 70%;*/
 }
 .button-save-changes-edit-project{
-  margin-left: 80%;
+  display: inline-block;
   /*position: relative;*/
   /*display: inline-block;*/
   /*float: right;*/
